--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.483.0",
     "next": "14.2.25",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "rehype-prism-plus": "^2.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-images": "^4.1.0",
+    "remark-shiki-twoslash": "^3.1.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
