--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Vercel
 on:
   push:
     branches:
-      - main  # Déclencher l'action uniquement sur la branche principale
+      - main  # Déclenche l'action sur les pushes à la branche main (ou autre branche spécifique)
 
 jobs:
   deploy:
@@ -25,5 +25,5 @@ jobs:
       - name: 🔄 Générer Prisma Client
         run: npx prisma generate
 
-      - name: 🚀 Déployer sur Vercel
-        run: npx vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: 🚀 Build Next.js (inclut Prisma)
+        run: npm run build
