--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@mapbox/rehype-prism": "^0.9.0",
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "jose": "^6.0.10",
     "lucide-react": "^0.483.0",
     "next": "14.2.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "rehype-external-links": "^3.0.0",
     "rehype-format": "^5.0.1",
@@ -34,7 +39,8 @@
     "remark-shiki-twoslash": "^3.1.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/mapbox__rehype-prism": "^0.8.3",
